# pacing-auction

./: .env  .gitignore  .python-version  LICENSE  README.md  allocation.py  elimination.py  generate_heatmaps.py  gil.py  main.ipynb  main.py  pyproject.toml  simulation.py  state.py
.ipynb_checkpoints/: playground-checkpoint.ipynb
honours_project/: auction.py  data.py  elimination.py  simulation.py
notebooks/: main.ipynb  playground.ipynb  results.ipynb  tests.ipynb
pacing_auction/: auction.py  data.py  elimination.py  generator.py
scripts/: example.py  main.py  results.py
tests/: test_correctness.py
